Add capability to highlight additional elements
New capability to specify more than one document element in the
programmatic steps element item. These additional elements are specified
in a comma-separated list in the element item. The additional specified
elements are highlighted with new divs which are destroyed at the end of
the step.

--- a/example/programmatic/index.html
+++ b/example/programmatic/index.html
@@ -75,7 +75,7 @@
           intro.setOptions({
             steps: [
               {
-                element: '#step1',
+                element: '#step1,#step2,#step3',
                 intro: "This is a tooltip."
               },
               {
@@ -89,7 +89,7 @@
                 position: 'left'
               },
               {
-                element: '#step4',
+                element: '#step4,#step1',
                 intro: "Another step.",
                 position: 'bottom'
               },
